--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,3 +1,40 @@
-.btnScroll{
-  
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.boxCard {
+    position: absolute;
+    padding: 10px;
+    bottom: 0;
+    color: #FFF;
+    background: linear-gradient(189deg, rgba(255, 255, 255, 0) 11%, rgba(0, 0, 0, 1) 90%);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: end;
+    flex-direction: column;
+}
+
+.boxCard p {
+    width: 95%;
+}
+
+.btnRecomendacao {
+    width: 100%;
+    height: 150px;
+    position: absolute;
+    background: linear-gradient(267deg, rgba(255, 255, 255, 0) 11%, rgba(0, 0, 0, 1) 90%);
+    /* overflow: hidden; */
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: space-evenly;
+    padding-left: 10px;
+}
+
+
+.btnRecomendacao p {
+    width: 70%;
 }
